--- a/src/global_css/style.css
+++ b/src/global_css/style.css
@@ -1,18 +1,25 @@
+@font-face {
+    font-family: 'chicle';
+    src: url('chicle-regular-webfont.woff2') format('woff2'),
+        url('chicle-regular-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
 :root {
+
+
     /* Farver */
-    --surface-default: #121212;
-    --surface-light: #181818;
-    --surface-light-hover: #282828;
-    --surface-black: #000;
-    --surface-white: #fff;
+    --text-beige: #fee1bb;
 
-    --text-muted: #b3b3b3;
-    --text-white: #fff;
-    --text-black: #000;
+    --text-navy: #010854;
 
-    --muted-border: #727272;
+    --border: #ff0092;
 
-    --brand-gradient: linear-gradient(90deg, #af2896, #509bf5);
+    --button: #ff0092;
+
+    --box_line: #fee1bb;
 
     /* Typografi */
     --font-size-h2: 1.5rem;
@@ -20,6 +27,8 @@
     --font-size-small: 0.875rem;
     --font-size-tiny: 0.75rem;
     --font-size-legal: 0.6875rem;
+    --font-size-button: 2.5rem;
+    --font-header: 'chicle', Arial, sans-serif;
 
     /* Spacing */
     --space-xxxs: 0.25rem;
@@ -38,6 +47,9 @@
     --border-radius-medium: 0.375rem;
     --border-radius-small: 0.25rem;
 
+    /* Padding */
+    --padding-button: 10px 30px;
+
     /* Box shadow */
     --shadow-default: 0 8px 24px hsl(0 0% 0% / 50%);
     --shadow-medium: 0 8px 8px rgb(0 0 0 / 30%);
@@ -45,6 +57,15 @@
 }
 
 body {
-    background-image: url(/img/background.png);
+    background-image: url(/img/background_samlet.png);
     background-size: cover;
+    font-family: var(--font-header);
+}
+
+
+a {
+    background-color: var(--button);
+    padding: var(--padding-button);
+    border-radius: var(--border-radius-round);
+    font-size: var(--font-size-button);
 }
