stadigvæk igang med at afprøve css

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,5 +13,7 @@ import "../global_css/style.css";
 	<body>
 		<h1>Forside</h1>
 		<a href="#">Værker</a>
+		<h3>hej</h3>
+		<p>blablabla</p>
 	</body>
 </html>
