--- a/src/global_css/style.css
+++ b/src/global_css/style.css
@@ -1,10 +1,18 @@
 @font-face {
     font-family: 'chicle';
-    src: url('chicle-regular-webfont.woff2') format('woff2'),
-        url('chicle-regular-webfont.woff') format('woff');
+    src: url('font/chicle-regular-webfont.woff') format('woff'),
+        url('font/chicle-regular-webfont.woff2') format('woff2');
     font-weight: normal;
     font-style: normal;
 
+}
+
+@font-face {
+    font-family: 'jua';
+    src: url('jua-regular-webfont.woff2') format('woff2'),
+        url('jua-regular-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
 }
 
 :root {
@@ -29,6 +37,8 @@
     --font-size-legal: 0.6875rem;
     --font-size-button: 2.5rem;
     --font-header: 'chicle', Arial, sans-serif;
+    --font-title: 'jua', Arial, sans-serif;
+    --font-body: Arial, sans-serif;
 
     /* Spacing */
     --space-xxxs: 0.25rem;
@@ -48,11 +58,11 @@
     --border-radius-small: 0.25rem;
 
     /* Padding */
-    --padding-button: 10px 30px;
+    --padding-button: 10px 50px;
 
     /* Box shadow */
-    --shadow-default: 0 8px 24px hsl(0 0% 0% / 50%);
-    --shadow-medium: 0 8px 8px rgb(0 0 0 / 30%);
+    --shadow-default: -1px 3px 30px -1px #ff0092;
+    --shadow-hover: 0 0 50px 2px #ff0092;
     --shadow-small: 0 2px 4px 0 hsl(0 0% 0% / 20%);
 }
 
@@ -68,4 +78,19 @@ a {
     padding: var(--padding-button);
     border-radius: var(--border-radius-round);
     font-size: var(--font-size-button);
+    color: var(--text-beige);
+    text-decoration: none;
+    box-shadow: var(--shadow-default);
+}
+
+a:hover {
+    box-shadow: var(--shadow-hover);
+}
+
+h3 {
+    font-family: var(--font-title);
+}
+
+p {
+    font-family: var(--font-body);
 }
