--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,9 +11,21 @@ import "../global_css/style.css";
 		<title>Forside</title>
 	</head>
 	<body>
-		<h1>Forside</h1>
-		<a href="#">Værker</a>
+		<a href="#">Program</a>
+		<h1>Værker</h1>
+		<a class="button" href="#">Værker</a>
+
 		<h3>hej</h3>
 		<p>blablabla</p>
+		<hr>
+
+		<img src="./img/tumblr_aa03b0fd1068c0b493e185a6c85d5e37_e0050eed_1280.jpg"width="200" height="200"alt="test">
+		<img class="img2" src="./img/tumblr_aa03b0fd1068c0b493e185a6c85d5e37_e0050eed_1280.jpg" width="200" height="200" alt="test">
+
+		<div>
+			<p class="box_text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorum aspernatur sint velit asperiores tempora reiciendis deserunt. Iusto nemo unde, accusantium blanditiis nostrum distinctio sed corporis non magni, aliquid fuga tempore!
+			Explicabo nobis ipsa voluptatibus alias minus dolore atque provident. Aut obcaecati ab unde, reprehenderit totam explicabo, ea, recusandae voluptatibus sint dolorem natus aliquam ut quasi sapiente voluptatum ad dolorum velit.</p>
+		<a class="link" href="#">Læs mere</a>
+		</div>
 	</body>
 </html>
