indsat ikoner og mere css

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import "../global_css/style.css";
 		<title>Forside</title>
 	</head>
 	<body>
-		<a href="#">Program</a>
+		<a class="nav" href="#">Program</a>
 		<h1>Værker</h1>
 		<a class="button" href="#">Værker</a>
 
