--- a/src/global_css/style.css
+++ b/src/global_css/style.css
@@ -156,13 +156,12 @@ div {
     text-decoration: underline;
 }
 
-
-a {
+.nav {
     text-decoration: none;
     color: var(--text-beige);
     font-size: var(--font-size-base);
 }
 
-a:hover {
+.nav:hover {
     color: var(--hover);
 }
