--- a/src/pages/single.astro
+++ b/src/pages/single.astro
@@ -13,9 +13,8 @@
 	<body>
 		
 		<h1>INSEKTERNES BLIK</h1>
-		<img class="img_single" src="" alt="#">
-
 		<article class="info1">
+		<img class="img_single" src="./img/sneugle.jpg" alt="#">
 		<p class="who">Anna Rosa Hiort-Lorenzen (DK)</p>
 		<p class="where">Vestre Kirkegård, entrance from Sjælør Boulevard</p>
 		<p class="bio">Here on Earth, we coexist with creatures who are most likely experiencing the world in very different ways than we do. Insects can see more light frequencies than us since they are capable of perceiving ultraviolet wavelengths. This means that they see colours that we cannot. In daylight, this piece is an installation with branches, leaves, seed pods, fungal hyphae and roots, but when darkness falls, the sculptures light up in ultraviolet hues. The installation illustrates the way we humans observe the natural world around us in daylight, as well as how insects see things at night. All plant life in this installation stems from Vestre Kirkegård.
@@ -29,7 +28,12 @@ As a textile and light designer, Anna Rosa Hiort-Lorenzen has developed her own 
 			<p class="tak_titel">Thanks to</p>
 			<p class="tak_tekst">Bavnehøj Områdefornyelse</p>
 		</article>
-
-		
 	</body>
 </html>
+
+<style>
+	.info1 {
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+	}
+</style>
