--- a/src/pages/liste.astro
+++ b/src/pages/liste.astro
@@ -1,5 +1,16 @@
 ---
-
+const data = await fetch(
+	"https://sxdcfbtekrznubmimpmp.supabase.co/rest/v1/cphlf2", 
+	
+	{
+		method:"GET",
+	headers: {
+		apikey: 
+		"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InN4ZGNmYnRla3J6bnVibWltcG1wIiwicm9sZSI6ImFub24iLCJpYXQiOjE2OTU3MjM3OTgsImV4cCI6MjAxMTI5OTc5OH0.SWGKNpOWij6-SQRCZs_H00PzCW70M2cG6_IYIIAjI1k"
+	},
+}
+).then((res) => res.json());
+import Gridliste from "../components/Gridliste.astro";
 ---
 
 <html lang="da">
@@ -8,9 +19,19 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Listeview</title>
+		<title>Forside</title>
 	</head>
 	<body>
-		<h1>Listeview</h1>
+		<h1>Forside</h1>
+		<a href=""></a>
+	
+		<section class="artworks">
+			{data.map(artwork=>{
+				return <Gridliste data={artwork}/>;
+			})}
+		
+		
+
+		</section>
 	</body>
 </html>
