Organiseret general css

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,5 +27,10 @@ import "../global_css/style.css";
 			Explicabo nobis ipsa voluptatibus alias minus dolore atque provident. Aut obcaecati ab unde, reprehenderit totam explicabo, ea, recusandae voluptatibus sint dolorem natus aliquam ut quasi sapiente voluptatum ad dolorum velit.</p>
 		<a class="link" href="#">Læs mere</a>
 		</div>
+		 <div class="banner">
+            <div class="track">
+                <div class="content">&nbsp;COPENHAGEN LIGHT FESTIVAL * DATES COMING SOON * FREE ATTENDANCE * &nbsp;COPENHAGEN LIGHT FESTIVAL * DATES COMING SOON * FREE ATTENDANCE *&nbsp;COPENHAGEN LIGHT FESTIVAL * DATES COMING SOON * FREE ATTENDANCE *</div>
+            </div>
+        </div>
 	</body>
 </html>
