--- a/src/components/Gridliste.astro
+++ b/src/components/Gridliste.astro
@@ -2,7 +2,8 @@
 const {data} = Astro.props;
 console.log(data);
 ---
-<article>
+<a href={`artworks/${data.slug}`}>
+    <article>
     <h2>{data.titel}</h2>
     <img src="" alt="">
-</article>
+</article></a>
