--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import "../global_css/style.css";
+import Footer from "../components/Footer.astro";
 ---
 
 <html lang="da">
@@ -11,6 +12,7 @@ import "../global_css/style.css";
 		<title>Forside</title>
 	</head>
 	<body>
+<Footer/>
 	</body>
 </html>
 
