--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,22 +1,18 @@
 ---
 import "../global_css/style.css";
 import Footer from "../components/Footer.astro";
+import Button from "../components/Button.astro";
 ---
 
 <html lang="da">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Forside</title>
-	</head>
-	<body>
-<Footer/>
-	</body>
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="viewport" content="width=device-width" />
+    <meta name="generator" content={Astro.generator} />
+    <title>Forside</title>
+  </head>
+  <body>
+    <Footer />
+  </body>
 </html>
-
-
-
-
-
