Stylet knap med billedet

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import "../global_css/style.css";
 import Footer from "../components/Footer.astro";
+import ImgButton from "../components/ImgButton.astro";
 ---
 
 <html lang="da">
@@ -12,6 +13,7 @@ import Footer from "../components/Footer.astro";
     <title>Forside</title>
   </head>
   <body>
+    <ImgButton />
     <Footer />
   </body>
 </html>
