--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,6 +12,9 @@ const data = await fetch(
 ).then((res) => res.json());
 
 console.log(data);
+
+
+import Nav from "../components/Nav.astro";
 ---
 
 <html lang="da">
@@ -20,8 +23,12 @@ console.log(data);
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
 		<title>Forside</title>
 	</head>
+	<Nav />
 	<body>
 		<h1>Forside</h1>
 		<a href=""></a>
