--- a/src/pages/liste.astro
+++ b/src/pages/liste.astro
@@ -1,42 +1,42 @@
 ---
 const data = await fetch(
-	"https://sxdcfbtekrznubmimpmp.supabase.co/rest/v1/cphlf2", 
-	
-	{
-		method:"GET",
-	headers: {
-		apikey: 
-		"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InN4ZGNmYnRla3J6bnVibWltcG1wIiwicm9sZSI6ImFub24iLCJpYXQiOjE2OTU3MjM3OTgsImV4cCI6MjAxMTI5OTc5OH0.SWGKNpOWij6-SQRCZs_H00PzCW70M2cG6_IYIIAjI1k"
-	},
-}
+  "https://sxdcfbtekrznubmimpmp.supabase.co/rest/v1/cphlf2",
+
+  {
+    method: "GET",
+    headers: {
+      apikey: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InN4ZGNmYnRla3J6bnVibWltcG1wIiwicm9sZSI6ImFub24iLCJpYXQiOjE2OTU3MjM3OTgsImV4cCI6MjAxMTI5OTc5OH0.SWGKNpOWij6-SQRCZs_H00PzCW70M2cG6_IYIIAjI1k",
+    },
+  }
 ).then((res) => res.json());
 
-
-
-
 import Gridliste from "../components/Gridliste.astro";
+import "../global_css/style.css";
+import Nav from "../components/Nav.astro";
+import Footer from "../components/Footer.astro";
 ---
 
 <html lang="da">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Forside</title>
-	</head>
-	<body>
-		<h1>Forside</h1>
-		<a href=""></a>
-	
-		<section class="artworks">
-			{data.map(artwork=>{
-				return <Gridliste data={artwork}/>;
-			})}
-		
-		
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="viewport" content="width=device-width" />
+    <meta name="generator" content={Astro.generator} />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
 
-		</section>
-	</body>
+    <title>Forside</title>
+  </head>
+  <body>
+    <h1>Forside</h1>
+    <a href=""></a>
+
+    <section class="artworks">
+      {
+        data.map((artwork) => {
+          return <Gridliste data={artwork} />;
+        })
+      }
+    </section>
+  </body>
 </html>
- 
