--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,216 +1,254 @@
-
-        <div id="wrap">
-	<nav>
-		<div class="logo">
-            <a href="#">
-                <img src="./img/logo2.png" alt="">
-            </a>
-        </div>
-		<button type="button" class="btn-hamburger" data-action="nav-toggle">
-			<span></span>
-			<span></span>
-			<span></span>
-			<span></span>
-			<span></span>
-		</button>
-		<ul class="nav-menu">
-           <li class="nav-item dropdown">
-				<a href="#" data-action="dropdown-toggle">Program</a>
-		</ul>
-	</nav>
+<div id="wrap">
+  <nav>
+    <div class="logo">
+      <a href="#">
+        <img src="./img/asdfgyhuji.png" alt="" />
+      </a>
+    </div>
+    <div class="container">
+      <button type="button" class="btn-hamburger" data-action="nav-toggle">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
+      <ul class="nav-menu">
+        <li class="nav-item dropdown">
+          <a href="#" data-action="dropdown-toggle">Program</a>
+        </li>
+        <li class="nav-item dropdown dk">
+          <a href="#" data-action="dropdown-toggle">
+            <svg width="40px" height="40px" viewBox="0 0 36 36" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--twemoji" preserveAspectRatio="xMidYMid meet"><path fill="#C60C30" d="M32 5H15v11h21V9a4 4 0 0 0-4-4zM15 31h17c2.209 0 4-1.791 4-4.5V20H15v11zM0 20v6.5C0 29.209 1.791 31 4 31h7V20H0zM11 5H4a4 4 0 0 0-4 4v7h11V5z"></path><path fill="#EEE" d="M15 5h-4v11H0v4h11v11h4V20h21v-4H15z"></path></svg>
+          </a>
+        </li>
+      </ul>
+    </div>
+  </nav>
 </div>
-       
 
-<style> 
 
-body {
-	padding: 0;
-	margin: 0;
-}
-.container {
-	position: relative;
-	z-index: 1;
-	margin-top: 70px;
-	padding: 5%;
-	min-height: 100%;
-}
-.container p {
-	font-family: 'Montserrat', sans-serif;
-	font-size: 1.2em;
-}
+
+  <style>
+    body {
+      padding: 0;
+      margin: 0;
+    }
+
+    nav {
+      position: fixed;
+      z-index: 2;
+      left: 0;
+      right: 0;
+      top: 0;
+      height: 70px;
+      padding: 0 1.5em;
+      border-bottom: 2px solid;
+      font-family: var(--font-chicle);
+      padding: 10px 20px;
+    display: flex;
+  justify-content: space-between; /* Distribute items to the left and right */
+  align-items: center;
+    }
 
 nav {
-	position: fixed;
-	z-index: 2;
-	left: 0;
-	right: 0;
-	top: 0;
-	height: 70px;
-	padding: 0 1.5em;
-	background-color: #2f3542;
-	font-family: 'Montserrat', sans-serif;
-     padding: 10px 20px;
+  display: flex;
+  justify-content: space-between; /* Distribute items to the left and right */
+  align-items: center;
 }
+
 .logo {
-    width: 15%;
-    display: flex;
-    margin-right: 20px;
+  width: 30%;
+}
+
+.container {
+  display: flex;
+  align-items: center;
+}
+
+
+    .logo img {
+      max-width: 100%;
+      height: auto;
     }
-.logo img {
-    max-width: 100%;
-    height: auto;
-        }
-nav .nav-menu {
-	position: absolute;
-	right: 1.5em;
-	top: 0;
-	padding: 0;
-	margin: 0;
-	list-style: none;
-}
-nav .nav-item {
-	display: inline-block;
-}
-nav .nav-item > a {
-	display: inline-block;
-	padding: 0 1.5em;
-	line-height: 70px;
-	color: #fff;
-	text-decoration: none;
-}
-nav .dropdown {
-	position: relative;
-}
-nav .dropdown a::after {
-	display: inline-block;
-	margin-left: .5em;
-	vertical-align: middle;
-	border-top: .3em solid #fff;
-	border-right: .3em solid transparent;
-	border-left: .3em solid transparent;
-}
-nav .dropdown.show a::after {
-	transform: rotate(180deg);
-}
-nav .dropdown-menu {
-	display: none;
-	position: absolute;
-	left: 0;
-	right: 0;
-	top: 100%;
-	padding: .5em 0;
-	margin-top: -.5em;
-	border: 1px solid rgba(0,0,0,.3);
-	border-radius: .5em;
-	background-color: #fff;
-}
-nav .dropdown.show .dropdown-menu {
-	display: block;
-}
-nav .dropdown-item {
-	display: block;
-	padding: 0 1.5em;
-	font-size: .875em;
-	color: #000;
-	line-height: 3;
-	text-decoration: none;
-}
-nav .btn-hamburger {
-	display: none;
-	position: absolute;
-	right: 1.5em;
-	top: 50%;
-	background-color: transparent;
-	border: 0;
-	cursor: pointer;
-	outline: none;
-	transform: translateY(-50%);
-}
-nav .btn-hamburger span {
-	display: block;
-	width: 30px;
-	height: 4px;
-	background-color: #fff;
-	margin: 6px;
-	border-radius: 2px;
-	transition: .3s ease-in-out;
-}
-nav .btn-hamburger span:nth-child(4),
-nav .btn-hamburger span:nth-child(5) {
-	position: absolute;
-	top: 10px;
-	opacity: .5;
-}
-nav .btn-hamburger span:nth-child(4) {
-	transform: rotate(45deg) scale(0);
-}
-nav .btn-hamburger span:nth-child(5) {
-	transform: rotate(-45deg) scale(0);
-}
-nav.opened .btn-hamburger span:nth-child(4) {
-	opacity: 1;
-	transform: rotate(45deg) scale(1);
-}
-nav.opened .btn-hamburger span:nth-child(5) {
-	opacity: 1;
-	transform: rotate(-45deg) scale(1);
-}
-nav.opened .btn-hamburger span:nth-child(1),
-nav.opened .btn-hamburger span:nth-child(2),
-nav.opened .btn-hamburger span:nth-child(3) {
-	opacity: 0;
-}
-@media screen and (max-width: 768px) {
-	nav .nav-menu {
-		position: fixed;
-		left: 0;
-		right: 0;
-		top: 70px;
-		bottom: 100%;
-		display: flex;
-		flex-direction: column;
-		justify-content: start;
-		background-color: #363d4e;
-		transition: bottom .5s ease-in-out;
-		overflow: hidden;
-	}
-	nav.opened .nav-menu {
-		bottom: 0;
-	}
-	nav .nav-item > a {
-		display: block;
-	}
-	nav .dropdown-menu {
-		position: relative;
-		top: 0;
-		margin: 0 1.5em;
-	}
-	nav .btn-hamburger {
-		display: block;
-	}
-}
-</style>
+    nav .nav-menu {
+      position: absolute;
+      right: 1.5em;
+      top: 0;
+      padding: 0;
+      margin: 0;
+      list-style: none;
+    }
+    nav .nav-item {
+      display: inline-block;
+    }
+    nav .nav-item > a {
+      display: inline-block;
+      padding: 0 1.5em;
+      color: var(--text-beige);
+      text-decoration: none;
+      font-size: 1.5rem;
+    }
 
-<script>
-let nav = document.querySelector('nav');
-let dropdown = nav.querySelector('.dropdown');
-let dropdownToggle = nav.querySelector("[data-action='dropdown-toggle']");
-let navToggle = nav.querySelector("[data-action='nav-toggle']");
+    nav .nav-item > a:hover {
+      color: var(--hover);
+    }
 
-dropdownToggle.addEventListener('click', () => {
-	if (dropdown.classList.contains('show')) {
-		dropdown.classList.remove('show');
-	} else {
-		dropdown.classList.add('show');
-	}
-});
+    .dk {
+      width: 30px;
+	  margin-top:20px:
+	  margin-left: 50px;
+    }
 
-navToggle.addEventListener('click', () => {
-	if (nav.classList.contains('opened')) {
-		nav.classList.remove('opened');
-	} else {
-		nav.classList.add('opened');
-	}
-});
+    nav .dropdown {
+      position: relative;
+    }
+    nav .dropdown a::after {
+      display: inline-block;
+      margin-left: 0.5em;
+      vertical-align: middle;
+      border-top: 0.3em solid #fff;
+      border-right: 0.3em solid transparent;
+      border-left: 0.3em solid transparent;
+    }
+    nav .dropdown.show a::after {
+      transform: rotate(180deg);
+    }
+    nav .dropdown-menu {
+      display: none;
+      position: absolute;
+      left: 0;
+      right: 0;
+      top: 100%;
+      padding: 0.5em 0;
+      margin-top: -0.5em;
+      border: 1px solid rgba(0, 0, 0, 0.3);
+      border-radius: 0.5em;
+      background-color: #fff;
+    }
+    nav .dropdown.show .dropdown-menu {
+      display: block;
+    }
+    nav .dropdown-item {
+      display: block;
+      padding: 0 1.5em;
+      font-size: 0.875em;
+      color: #000;
+      line-height: 3;
+      text-decoration: none;
+    }
+    nav .btn-hamburger {
+      display: none;
+      position: absolute;
+      right: 1.5em;
+      top: 50%;
+      background-color: transparent;
+      border: 0;
+      cursor: pointer;
+      outline: none;
+      transform: translateY(-50%);
+    }
+    nav .btn-hamburger span {
+      display: block;
+      width: 30px;
+      height: 4px;
+      background-color: var(--line-banner);
+      margin: 6px;
+      border-radius: 2px;
+      transition: 0.3s ease-in-out;
+    }
+    nav .btn-hamburger span:nth-child(4),
+    nav .btn-hamburger span:nth-child(5) {
+      position: absolute;
+      top: 10px;
+      opacity: 0.5;
+    }
+    nav .btn-hamburger span:nth-child(4) {
+      transform: rotate(45deg) scale(0);
+    }
+    nav .btn-hamburger span:nth-child(5) {
+      transform: rotate(-45deg) scale(0);
+    }
+    nav.opened .btn-hamburger span:nth-child(4) {
+      opacity: 1;
+      transform: rotate(45deg) scale(1);
+    }
+    nav.opened .btn-hamburger span:nth-child(5) {
+      opacity: 1;
+      transform: rotate(-45deg) scale(1);
+    }
+    nav.opened .btn-hamburger span:nth-child(1),
+    nav.opened .btn-hamburger span:nth-child(2),
+    nav.opened .btn-hamburger span:nth-child(3) {
+      opacity: 0;
+    }
 
-</script>
+    @media screen and (max-width: 768px) {
+      nav .nav-menu {
+        position: fixed;
+        left: 0;
+        right: 0;
+        top: 70px;
+        bottom: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: start;
+        background-color: var(--text-navy);
+        transition: bottom 0.5s ease-in-out;
+        overflow: hidden;
+      }
+      nav.opened .nav-menu {
+        bottom: 0;
+      }
+      nav .nav-item > a {
+        display: block;
+      }
+
+      nav .nav-item > a:hover {
+        color: var(--text-beige);
+      }
+
+      nav .dropdown-menu {
+        position: relative;
+        top: 0;
+        margin: 0 1.5em;
+      }
+
+      nav .btn-hamburger {
+        display: block;
+      }
+
+      .logo {
+        width: 70%;
+        display: flex;
+        margin-top: 1px;
+      }
+      .dk {
+        width: 30px;
+      }
+    }
+  </style>
+
+  <script>
+    let nav = document.querySelector("nav");
+    let dropdown = nav.querySelector(".dropdown");
+    let dropdownToggle = nav.querySelector("[data-action='dropdown-toggle']");
+    let navToggle = nav.querySelector("[data-action='nav-toggle']");
+
+    dropdownToggle.addEventListener("click", () => {
+      if (dropdown.classList.contains("show")) {
+        dropdown.classList.remove("show");
+      } else {
+        dropdown.classList.add("show");
+      }
+    });
+
+    navToggle.addEventListener("click", () => {
+      if (nav.classList.contains("opened")) {
+        nav.classList.remove("opened");
+      } else {
+        nav.classList.add("opened");
+      }
+    });
+  </script>
+</div>
