Designet liste views timeline

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -50,6 +50,7 @@ import "../global_css/style.css";
     padding: 11px 24px 7px 15px;
     font-family: var(--font-jua);
     justify-content: flex-start; /* Align everything to the left */
+    z-index: 2;
   }
 
   a {
