--- a/src/components/Timeline.astro
+++ b/src/components/Timeline.astro
@@ -61,7 +61,6 @@ const data = await fetch(
 <style>
   /* TIMELINE
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
-
   *,
   *::before,
   *::after {
@@ -75,6 +74,21 @@ const data = await fetch(
     padding-bottom: 50px;
   }
 
+  h2 {
+    white-space: nowrap;
+    margin-left: 32px;
+    font-size: 4rem;
+  }
+
+  img {
+    display: block;
+    width: 400px;
+    height: 300px;
+  }
+
+  img:hover {
+  }
+
   .timeline ul {
     padding: 50px 0;
   }
@@ -86,19 +100,6 @@ const data = await fetch(
     margin: 0 auto;
     padding-top: 50px;
     background: var(--text-beige);
-  }
-
-  .timeline ul li::after {
-    content: "";
-    position: absolute;
-    left: 50%;
-    bottom: 0;
-    transform: translateX(-50%);
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    background: inherit;
-    z-index: 1;
   }
 
   .timeline ul li div {
@@ -124,7 +125,7 @@ const data = await fetch(
   .timeline ul li:nth-child(odd) div::before {
     left: -15px;
     border-width: 8px 16px 8px 0;
-    border-color: transparent var(--button) transparent transparent;
+    content: none;
   }
 
   .timeline ul li:nth-child(even) div {
@@ -134,21 +135,9 @@ const data = await fetch(
   .timeline ul li:nth-child(even) div::before {
     right: -15px;
     border-width: 8px 0 8px 16px;
-    border-color: transparent transparent transparent var(--button);
+    content: none;
   }
 
-  time {
-    display: block;
-    font-size: 1.2rem;
-    font-weight: bold;
-    margin-bottom: 8px;
-  }
-
-  h2 {
-    white-space: nowrap;
-    margin-left: 32px;
-    font-size: 4rem;
-  }
   /* EFFECTS
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
@@ -207,46 +196,6 @@ const data = await fetch(
       left: -15px;
       border-width: 8px 16px 8px 0;
       border-color: transparent var(--button) transparent transparent;
-    }
-  }
-
-  /* EXTRA/CLIP PATH STYLES
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-  .timeline-clippy ul li::after {
-    width: 40px;
-    height: 40px;
-    border-radius: 0;
-  }
-
-  .timeline-rhombus ul li::after {
-    clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
-  }
-
-  .timeline-rhombus ul li div::before {
-    bottom: 12px;
-  }
-
-  .timeline-star ul li::after {
-    clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
-  }
-
-  .timeline-heptagon ul li::after {
-    clip-path: polygon(50% 0%, 90% 20%, 100% 60%, 75% 100%, 25% 100%, 0% 60%, 10% 20%);
-  }
-
-  .timeline-infinite ul li::after {
-    animation: scaleAnimation 2s infinite;
-  }
-
-  @keyframes scaleAnimation {
-    0% {
-      transform: translateX(-50%) scale(1);
-    }
-    50% {
-      transform: translateX(-50%) scale(1.25);
-    }
-    100% {
-      transform: translateX(-50%) scale(1);
     }
   }
 </style>
