--- a/src/global_css/style.css
+++ b/src/global_css/style.css
@@ -87,7 +87,7 @@
 
     html {
         height: 100%;
-        background-image: url(/img/background_samlet.png);
+        background-image: url(/img/cphlfbackground.png);
         background-size: cover;
     }
 
