--- a/src/pages/artworks/[slug].astro
+++ b/src/pages/artworks/[slug].astro
@@ -1,4 +1,7 @@
 ---
+import "../../global_css/style.css";
+import Nav from "../../components/Nav.astro";
+import Footer from "../../components/Footer.astro";
 export async function getStaticPaths() {
   const data = await fetch("https://sxdcfbtekrznubmimpmp.supabase.co/rest/v1/cphlf2", {
     method: "GET",
@@ -16,9 +19,6 @@ export async function getStaticPaths() {
 }
 
 const { myData } = Astro.props;
-import "../../global_css/style.css";
-import Nav from "../../components/Nav.astro";
-import Footer from "../../components/Footer.astro";
 ---
 
 <html lang="da">
@@ -34,26 +34,90 @@ import Footer from "../../components/Footer.astro";
   </head>
   <body>
     <h1>{myData.titel}</h1>
-    <article class="info1">
+    <div class="grid">
       <img class="img_single" src={myData.img} alt="#" />
-      <p class="who">{myData.hvem}</p>
-      <p class="where">{myData.hvor}</p>
-      <p class="bio">{myData.bio}</p>
-
-      <article class="info2">
-        <p class="link_titel">links</p>
-        <a class="link" href={myData.link}>klik</a>
-        <a class="social_medie" href={myData.socialemedier}>klak</a>
-        <p class="tak_titel">Thanks to</p>
-        <p class="tak_tekst">{myData.tak}</p>
+      <article class="info1">
+        <h4 class="overskrift_info1 who_overskrift info_flex">WHO:</h4>
+        <p class="who overskrift info_flex">{myData.hvem}</p>
+        <h4 class="overskrift_info1 info_flex">WHERE:</h4>
+        <p class="where overskrift info_flex">{myData.hvor}</p>
+        <h4 class="overskrift about info_flex"><strong>ABOUT:</strong></h4>
+        <p class="bio info_flex">{myData.bio}</p>
       </article>
-    </article>
+      <article class="info2">
+        <h4 class="link_titel info2"><strong>LINKS:</strong></h4>
+        <a class="link info2" href={myData.link}>Website</a>
+        <br />
+        <a class="social_medie link info2" href={myData.socialemedier}>Instagram</a>
+        <h4 class="tak_titel info2"><strong>THANKS TO:</strong></h4>
+        <p class="tak_tekst info2">{myData.tak}</p>
+      </article>
+    </div>
   </body>
+  <!-- //*MANGLER FOOTER -->
+</html>
 
-  <style>
-    .info1 {
+<style>
+  .overskrift,
+  .overskrift_info1,
+  h1 {
+    text-align: center;
+  }
+  body {
+    padding: 50px;
+  }
+  h4 {
+    padding-top: 20px;
+    font-family: var(--font-jua);
+    font-size: 1.2rem;
+  }
+  img {
+    padding-bottom: 30px;
+  }
+  .about {
+    padding-top: 50px;
+  }
+  .link_titel {
+    padding-top: 100px;
+    padding-bottom: 15px;
+  }
+  .link {
+    text-decoration: underline;
+    font-family: var(--font-arial);
+  }
+  h1 {
+    font-size: var(--font-size-h1);
+  }
+  .tak_titel {
+    padding-top: 40px;
+  }
+  @media screen and (min-width: 768px) {
+    .grid {
       display: grid;
       grid-template-columns: 1fr 1fr;
     }
-  </style>
-</html>
+    h1 {
+      font-size: 4rem;
+      padding: 40px;
+    }
+
+    .overskrift_info1,
+    .overskrift,
+    .bio {
+      grid-column: 3;
+      text-align: start;
+    }
+
+    .info2 {
+      grid-column: 1;
+    }
+    .info_flex {
+      display: flex;
+      flex-direction: column;
+    }
+    .info1 {
+      display: grid;
+      padding-left: 50px;
+    }
+  }
+</style>
