--- a/src/global_css/style.css
+++ b/src/global_css/style.css
@@ -1,8 +1,8 @@
     /* Hentning af Fonte */
     @font-face {
         font-family: 'chicle';
-        src: url('font/chicle-regular-webfont.woff') format('woff'),
-            url('font/chicle-regular-webfont.woff2') format('woff2');
+        src: url('/font/chicle-regular-webfont.woff') format('woff'),
+            url('/font/chicle-regular-webfont.woff2') format('woff2');
         font-weight: normal;
         font-style: normal;
 
@@ -10,8 +10,8 @@
 
     @font-face {
         font-family: 'jua';
-        src: url('jua-regular-webfont.woff2') format('woff2'),
-            url('jua-regular-webfont.woff') format('woff');
+        src: url('/jua-regular-webfont.woff2') format('woff2'),
+            url('/font/jua-regular-webfont.woff') format('woff');
         font-weight: normal;
         font-style: normal;
     }
@@ -36,7 +36,7 @@
 
         /* Typografi */
         /* Størrelser */
-        --font-size-h1: 8rem;
+        --font-size-h1: 3rem;
         --font-size-h3: 2rem;
         --font-size-base: 1rem;
         --font-size-banner: 2rem;
