--- a/src/pages/artworks/[slug].astro
+++ b/src/pages/artworks/[slug].astro
@@ -32,6 +32,7 @@ const { myData } = Astro.props;
 
     <title>{myData.slug}</title>
   </head>
+  <Nav />
   <body>
     <h1>{myData.titel}</h1>
     <div class="grid">
@@ -54,70 +55,74 @@ const { myData } = Astro.props;
       </article>
     </div>
   </body>
+  <Footer />
   <!-- //*MANGLER FOOTER -->
-</html>
 
-<style>
-  .overskrift,
-  .overskrift_info1,
-  h1 {
-    text-align: center;
-  }
-  body {
-    padding: 50px;
-  }
-  h4 {
-    padding-top: 20px;
-    font-family: var(--font-jua);
-    font-size: 1.2rem;
-  }
-  img {
-    padding-bottom: 30px;
-  }
-  .about {
-    padding-top: 50px;
-  }
-  .link_titel {
-    padding-top: 100px;
-    padding-bottom: 15px;
-  }
-  .link {
-    text-decoration: underline;
-    font-family: var(--font-arial);
-  }
-  h1 {
-    font-size: var(--font-size-h1);
-  }
-  .tak_titel {
-    padding-top: 40px;
-  }
-  @media screen and (min-width: 768px) {
-    .grid {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
+  <style>
+    .overskrift,
+    .overskrift_info1,
+    h1 {
+      text-align: center;
+    }
+    body {
+      padding: 50px;
+    }
+    h4 {
+      padding-top: 20px;
+      font-family: var(--font-jua);
+      font-size: 1.2rem;
+    }
+    img {
+      padding-bottom: 30px;
+    }
+    .about {
+      padding-top: 50px;
+    }
+    .link_titel {
+      padding-top: 100px;
+      padding-bottom: 15px;
+    }
+    .link {
+      text-decoration: underline;
+      font-family: var(--font-arial);
     }
     h1 {
-      font-size: 4rem;
-      padding: 40px;
+      font-size: var(--font-size-h1);
     }
+    .tak_titel {
+      padding-top: 40px;
+    }
+    @media screen and (min-width: 768px) {
+      .grid {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+      }
+      h1 {
+        font-size: 4rem;
+        padding: 40px;
+      }
 
-    .overskrift_info1,
-    .overskrift,
-    .bio {
-      grid-column: 3;
-      text-align: start;
-    }
+      .overskrift_info1,
+      .overskrift,
+      .bio {
+        grid-column: 3;
+        text-align: start;
+      }
 
-    .info2 {
-      grid-column: 1;
+      .info2 {
+        grid-column: 1;
+      }
+      .info_flex {
+        display: flex;
+        flex-direction: column;
+      }
+      .info1 {
+        display: grid;
+        padding-left: 50px;
+      }
+      .link_titel {
+        padding-top: 30px;
+      }
     }
-    .info_flex {
-      display: flex;
-      flex-direction: column;
-    }
-    .info1 {
-      display: grid;
-      padding-left: 50px;
-    }
-  }
-</style>
+  </style>
+</html>
