backgrounds farve på nav

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -40,7 +40,7 @@ import "../global_css/style.css";
     display: flex;
     flex-direction: column;
     gap: var(--space-md);
-    position: fixed;
+    position: relative;
     bottom: 0;
     left: 0;
     right: 0;
