--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -46,6 +46,8 @@
     padding: 10px 20px;
     display: flex;
     justify-content: space-between;
+    background-image: url(/img/cphlfbackground.png);
+    background-size: cover;
   }
 
   .logo {
@@ -193,7 +195,8 @@
       display: flex;
       flex-direction: column;
       align-items: flex-start; /* Align items to the left */
-      background-color: var(--text-navy);
+      background-image: url(/img/cphlfbackground.png);
+      background-size: cover;
       transition: bottom 0.5s ease-in-out;
       overflow: hidden;
     }
