--- a/src/pages/artworks/[slug].astro
+++ b/src/pages/artworks/[slug].astro
@@ -69,6 +69,7 @@ const { myData } = Astro.props;
     }
     main {
       padding: 50px;
+      padding-top: 100px;
     }
     h4 {
       padding-top: 20px;
