--- a/src/components/ImgButton.astro
+++ b/src/components/ImgButton.astro
@@ -3,13 +3,13 @@ import "../global_css/style.css";
 ---
 
 <a href="#">
-  <img src="./img/sneugle.jpg" alt="test" />
+  <img src="img/sneugle.jpg" />
 </a>
 
 <style>
   img {
-    width: 200px;
-    height: 200px;
+    width: 300px;
+    height: 300px;
     border-radius: 50%;
     border: var(--border-img);
     box-shadow: var(--shadow-default);
