--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,6 +15,7 @@ console.log(data);
 import "../global_css/style.css";
 import Nav from "../components/Nav.astro";
 import Footer from "../components/Footer.astro";
+import TekstBox from "../components/TekstBox.astro";
 ---
 
 <html lang="da">
@@ -32,6 +33,7 @@ import Footer from "../components/Footer.astro";
   <body>
     <h1>Forside</h1>
     <a href=""></a>
+    <TekstBox />
     <Footer />
   </body>
 </html>
