--- a/src/pages/liste.astro
+++ b/src/pages/liste.astro
@@ -10,7 +10,7 @@ const data = await fetch(
   }
 ).then((res) => res.json());
 
-import Gridliste from "../components/Gridliste.astro";
+import Timeline from "../components/Timeline.astro";
 import "../global_css/style.css";
 import Nav from "../components/Nav.astro";
 import Footer from "../components/Footer.astro";
@@ -34,7 +34,7 @@ import Footer from "../components/Footer.astro";
     <section class="artworks">
       {
         data.map((artwork) => {
-          return <Gridliste data={artwork} />;
+          return <Timeline data={artwork} />;
         })
       }
     </section>
